--- a/TODO
+++ b/TODO
@@ -1,2 +1,8 @@
-[ ] Work and analyse test6.py to get pyopengl to work, and glfw too
+[x] Work and analyse test6.py to get pyopengl to work, and glfw too
+    [x] Solve OpenGL context error -> Due to Wayland
+    [ ] Now, have to solve a black screen -> Nothing is rendered
+[ ] Work on opengl + glfw
+    [x] Base display implementation
+        [ ] Now, have to solve a black screen -> Nothing is rendered
+    [ ] Have to implement all the events gestion with glfw
 [ ] Vulkan + glfw is then next
